--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 刘一峰
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://wx2.sinaimg.cn/mw690/c260f7ably1g2jn4ggbvxj21yc1ych5h.jpg
 
 #
 # Flags below are optional
